:whale: build: Update devcontainer to match latest go version

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,15 +1,19 @@
-FROM ghcr.io/ciromattia/kcc:6.1.0
+FROM ghcr.io/ciromattia/kcc:6.2.1
 
 # Run updates and clean up
 RUN apt update && apt install -y wget && apt upgrade -y  \
     && apt clean \
     && rm -rf /var/lib/apt/lists/*
 
+WORKDIR /home/Downloads/
+ENV GOVERSION=1.23.2
+ENV COMPRESSED_GO_FILE=go${GOVERSION}.linux-amd64.tar.gz
+
 # Install Go
-RUN wget https://go.dev/dl/go1.22.5.linux-amd64.tar.gz \
+RUN wget https://go.dev/dl/${COMPRESSED_GO_FILE} \
     && rm -rf /usr/local/go \
-    && tar -C /usr/local -xzf go1.22.5.linux-amd64.tar.gz \
-    && rm go1.22.5.linux-amd64.tar.gz
+    && tar -C /usr/local -xzf ${COMPRESSED_GO_FILE} \
+    && rm ${COMPRESSED_GO_FILE}
 
 ENV PATH=$PATH:/usr/local/go/bin
 USER root
