:whale: build: Update devcontainer Go runtime version

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,12 +1,12 @@
 FROM ghcr.io/ciromattia/kcc:6.2.1
 
 # Run updates and clean up
-RUN apt update && apt install -y wget && apt upgrade -y  \
+RUN apt update && apt install -y wget make && apt upgrade -y  \
     && apt clean \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /home/Downloads/
-ENV GOVERSION=1.23.2
+ENV GOVERSION=1.24.3
 ENV COMPRESSED_GO_FILE=go${GOVERSION}.linux-amd64.tar.gz
 
 # Install Go
@@ -19,3 +19,5 @@ ENV PATH=$PATH:/usr/local/go/bin
 USER root
 RUN pip3 install --upgrade pip \
     && pip3 install natsort
+
+WORKDIR /home/kindlego
